Fix spacing on anchors, comments

--- a/src/components/Comments/Comments.scss
+++ b/src/components/Comments/Comments.scss
@@ -42,6 +42,10 @@ label{
         margin: 2rem 1rem 1rem 1rem;
     }
 
+    &__comment-wrapper{
+        flex-grow: 1;
+    }
+
 
 
 
